[metadata]
name = ml-dev-utils
version = 0.0.1
author = ML-Dev
author_email = christian.guenther@ltu.se
description = Utils for ML-Dev.
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LTU-Machine-Learning/ML-Dev-Utils
project_urls =
    Bug Tracker = https://github.com/LTU-Machine-Learning/ML-Dev-Utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src